# PG

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build-and-test.yml
data/input/: scene.yml
demo/: CMakeLists.txt
demo/data/input/: scene.yml
demo/data/output/: raytracer.spv
demo/src/: main.cpp
libs/Prism/: CMakeLists.txt
libs/Prism/include/: Prism.hpp
libs/Prism/include/Prism/: Colormap.hpp  ObjReader.hpp  camera.hpp  color.hpp  environment.hpp  material.hpp  matrix.hpp  mesh.hpp  objects.hpp  plane.hpp  point.hpp  ray.hpp  scene.hpp  sphere.hpp  style.hpp  triangle.hpp  utils.hpp  vector.hpp
libs/Prism/src/: camera.cpp  color.cpp  environment.cpp  init.cpp  matrix.cpp  mesh.cpp  plane.cpp  point.cpp  ray.cpp  scene.cpp  scene_parser.cpp  sphere.cpp  triangle.cpp  utils.cpp  vector.cpp
src/: CMakeLists.txt  main.cpp
src/include/: Prism.hpp
src/include/Prism/: Colormap.hpp  matrix.hpp  ray.hpp  scene_parser.hpp  sphere.hpp  style.hpp  triangle.hpp  utils.hpp
src/include/Prism/core/: color.hpp  material.hpp  matrix.hpp  point.hpp  ray.hpp  style.hpp  texture.hpp  utils.hpp  vector.hpp
src/include/Prism/io/: ObjReader.hpp
src/include/Prism/objects/: Colormap.hpp  ObjReader.hpp  aabb.hpp  mesh.hpp  objects.hpp  plane.hpp  sphere.hpp  triangle.hpp
src/include/Prism/scene/: acceleration.hpp  camera.hpp  light.hpp  octree.hpp  scene.hpp  scene_parser.hpp
src/include/Prism/vulkan/: vulkan_context.hpp  vulkan_gpu_structs.hpp  vulkan_renderer.hpp  vulkan_scene_data.hpp
src/src/: scene.cpp  scene_parser.cpp  utils.cpp
src/src/core/: color.cpp  init.cpp  matrix.cpp  point.cpp  ray.cpp  utils.cpp  vector.cpp
src/src/objects/: aabb.cpp  mesh.cpp  plane.cpp  sphere.cpp  triangle.cpp
src/src/scene/: acceleration.cpp  camera.cpp  octree.cpp  scene.cpp  scene_parser.cpp
src/src/shaders/: compile.bat  pathtracer.comp  raytracer.comp  raytracer.spv
src/src/vulkan/: vulkan_context.cpp  vulkan_renderer.cpp  vulkan_scene_data.cpp
src/src/vulkan/shaders/: raytracer.comp
tests/: CMakeLists.txt  Matrix.cpp  Point3.cpp  TestHelpers.hpp  Utils.cpp  Vector3.cpp  camera.cpp  plane_test.cpp  ray.cpp  sphere.cpp  transformations.cpp
tests/include/: TestHelpers.hpp
tests/src/: CameraTest.cpp  MatrixTest.cpp  PlaneTest.cpp  Point3Test.cpp  RayTest.cpp  SphereTest.cpp  TransformationsTest.cpp  UtilsTest.cpp  Vector3Test.cpp
